--- a/WebContent/work.html
+++ b/WebContent/work.html
@@ -9,26 +9,27 @@
 	            <article>
 	            	<div class="wrap">
 	            	<div class="artical-info">
-	            		<h4>Account Management.</h4>
+	            		<h4>Easy Finance.</h4>
 	            		<p>
-							Account Management is a Web Application which can manage our money in different account. 
+							Easy Finance is a Web and iOS Application which can manage our money in different account. 
 							There are some main functions of this application: recording the money we spend and earn, searching the record and getting the report of the record. 
 							This application has some features like:<br>
 							1. Easy to manage account!<br>
-							With account management, easy to know where you spend and where you earn.  Also easy to get different report.<br>
+							With Easy Finance, easy to know where you spend and where you earn.  Also easy to get different report.<br>
 							2. Record as you want !<br>
 							Based on Web Application, now register your account.Then you can record everywhere and everytime.<br>
 							3. Receive your money !<br>
 							When you record your spend and your earn, you'll amazing to find :It's so easy to receive your money, never difficult.
 	            		</p>
-	            		<a href="http://120.25.237.244/AccountManagement/" target="_blank"><span> </span>Visit Account Management</a>
+	            		<a href="http://tomcat.fczm.pw/AccountManagement/" target="_blank"><span> </span>Visit Account Management</a>
 	            		<p>Test Account: lm2343635@126.com <br>Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
 	            		<img src="./images/AccountManagement.png" onclick="showOnePhoto('./images/AccountManagement.png')"/>
 	            		<p>Hibernate / Spring / DWR / Highchart.js / BootStrap / jQuery / MySQL / iOS</p>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=AccountManagement.doc"><span> </span> Download the Report of Account Management</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=Account Management.pptx"><span> </span> Download the PowerPoint of Account Management</a>
+	            		<a class="readmore" href="file/An Individual Financial Management System Based on Asynchronous Communication.pdf"><span> </span> Paper of Easy Finance</a>
+	            		<a class="readmore" href="FileServlet?task=download&fileName=AccountManagement.doc"><span> </span> Download the Report of Easy Finance</a>
+	            		<a class="readmore" href="FileServlet?task=download&fileName=Account Management.pptx"><span> </span> Download the PowerPoint of Easy Finance</a>
 	            	</div>
 	            	</div>
 	            </article>
@@ -46,7 +47,7 @@
 		            		<em style="font-style: italic;">Collection Equipment for Biological Environment Factor of Forest Based on Wireless Transmission</em>.
 		            		Thanks for the advising of our guide teacher Dan Li.
 	            		</p>
-	            		<a class="readmore" href="http://120.25.237.244/DeforestationManagement" target="_blank"><span> </span> Visit Deforestation Management</a>
+	            		<a class="readmore" href="http://tomcat.fczm.pw/DeforestationManagement" target="_blank"><span> </span> Visit Deforestation Management</a>
 	            		<p>Test Administrator Account: admin <br>Test Administrator Password: 123<br>Test Checker Account: test <br>Test Checker Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
@@ -73,7 +74,7 @@
 	            			Administrator can control the process of students' graduation project, including when they start their project, where they make their presentation.
 	            			Guide teachers can input The basic information of the project of their students.
 	            		</p>
-	            		<a href="http://120.25.237.244/GraduationProject/" target="_blank"><span> </span>Visit Graduation Project Management</a>
+	            		<a href="http://tomcat.fczm.pw/GraduationProject/" target="_blank"><span> </span>Visit Graduation Project Management</a>
 	            		<p>Test Administrator Account: 100000<br> Test Administrator Password: 123<br>Test Teacher Account: 100001 <br> Test Teacher Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
@@ -90,7 +91,7 @@
 	            			Seven Stars Logistics Management is a commercial project entrusted by Jingmen Xinwang Science and Technology Development Co., Ltd. 
 	            			Total amount of this project is about 11500 RMB. 
 	            		</p>
-	            		<a href="http://120.25.237.244/SevenStars/" target="_blank"><span> </span>Visit Seven Stars</a>
+	            		<a href="http://tomcat.fczm.pw/SevenStars/" target="_blank"><span> </span>Visit Seven Stars</a>
 	            		<p>Because this is a commercial project, I cannot provide a test account. You can view and download more screen shoots to know more about it</p>
 	            	</div>
 	            	<div class="artical-pic">
@@ -108,12 +109,12 @@
 	            	<div class="artical-info">
 	            		<h4>Samll Games</h4>
 	            		<p>In my spare time, I made some small games like flappy bird, snake, slot machine and poker recorder by javascript. By making those small game, especially flappy bird, I have learned the basic physics principle for games and the differences between game and application.</p>
-	            		<a href="http://120.25.237.244/GameCenter/bird.html" target="_blank"><span> </span>Visit Flappy Bird</a><br>
-	            		<a href="http://120.25.237.244/GameCenter/snake.html" target="_blank"><span> </span>Visit Crazy Snake</a><br>
-	            		<a href="http://120.25.237.244/GameCenter/tiger.html" target="_blank"><span> </span>Visit Slot Machine</a><br>
-	            		<a href="http://120.25.237.244/GameCenter/PokerRecorder.html" target="_blank"><span> </span>Visit Poker Recorder</a><br>
-	            		<a href="http://120.25.237.244/GameCenter/TwoPoker.html" target="_blank"><span> </span>Visit Two Poker Recorder</a><br>
-	            		<a href="http://120.25.237.244/GameCenter/" target="_blank"><span> </span>Visit Index of Game Center</a>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/bird.html" target="_blank"><span> </span>Visit Flappy Bird</a><br>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/snake.html" target="_blank"><span> </span>Visit Crazy Snake</a><br>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/tiger.html" target="_blank"><span> </span>Visit Slot Machine</a><br>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/PokerRecorder.html" target="_blank"><span> </span>Visit Poker Recorder</a><br>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/TwoPoker.html" target="_blank"><span> </span>Visit Two Poker Recorder</a><br>
+	            		<a href="http://tomcat.fczm.pw/GameCenter/" target="_blank"><span> </span>Visit Index of Game Center</a>
 	            	</div>
 	            	<div class="artical-pic">
 	            		<img src="./images/GameCenter.png" />
@@ -127,7 +128,7 @@
 	            	<div class="artical-info">
 	            		<h4>Course Selection System</h4>
 	            		<p>Course Selection System is my first Web Application. Although it is so simple, it is meaningful for me to start the learning of Java Web Application. Is is also my first program based on graphic user interface.</p>
-	            		<a href="http://120.25.237.244/StudentManagement/" target="_blank"><span> </span>Visit Course Selection System</a>
+	            		<a href="http://tomcat.fczm.pw/StudentManagement/" target="_blank"><span> </span>Visit Course Selection System</a>
 	            		<p>
 	            			Test Student Account: 20114237 <br>Test Student Password: 123456 <br>
 	            			Test Teacher Account: 100101 <br>Test Teacher Password: 123456 <br>
