--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Meng Li's Home Page</title>
 		<link rel="Shortcut Icon" href="images/favicon.ico">
 		<link href="./css/bootstrap.css" rel='stylesheet' type='text/css' />
@@ -36,7 +37,7 @@
 								Hello,<br/>
 								I'm Meng Li. <br/>
 								A web/mobile application programmer.<br/>
-								Based in Kitami.<br/>
+								Based in Harbin.<br/>
 							</p>
 							<a class="contactme" href="#contact">CONTACT ME</a>
 						</div>
@@ -49,11 +50,11 @@
 					<span> </span>
 					<div class="col-md-6 aboutus-left">
 						<p>Born in Jingmen, Hubei, China. Graduated from Longquan High School of Jingmen. </p>
-						<p>Now I am studying as an exchange student in Kitami Institute of Techonogy in Hokkaido, Japan. My university in China is Northeast Forestry University in Harbin, Heilongjiang province.</p>
+						<p>Now I am studying in Northeast Forestry University in Harbin, Heilongjiang province, Chine.</p>
 						<p>I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.</p>
 					</div>
 					<div class="col-md-6 aboutus-right">
-						<p>I am familiar with C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.</p>
+						<p>I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.</p>
 						<p>In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.</p>
 					</div>
 				</div>
@@ -85,16 +86,16 @@
 					<span> </span>
 				<div class="contact-grids">
 					<div class="col-md-6 contact-left">
-						<p>My Address in Japan</p>
+						<p>My Hometown</p>
 						<div class="address">
-							<label>Kitami Institute of Technology, Hokuen Dormitory.</label>
-							<label>111-2,Toryocho</label>
-							<label>Kitami, Hokkaido, Japan</label>
-							<label>+81 080 9616 3715</label>
+							<label>Hetianxia 902</label>
+							<label>Baiyun Ave No.1, Dongbao District</label>
+							<label>Jingmen, Hubei Province, China</label>
+							<label>+86 18571967011</label>
 						</div>
 					</div>
 					<div class="col-md-6 contact-right">
-						<p>Address in China</p>
+						<p>My University</p>
 						<div class="address">
 							<label>Northeast Forestry University, 9#A</label>
 							<label>Hexing Road, Xiangfang District</label>
@@ -107,7 +108,7 @@
 			</div>
 			</div>
 		<div class="contact-map">
-			<iframe src="http://ditu.google.cn/maps?f=d&amp;source=s_d&amp;saddr=43.822847,143.905082&amp;daddr=%E5%8C%97%E8%A7%81%E5%B7%A5%E4%B8%9A%E5%A4%A7%E5%AD%A6,+%E6%97%A5%E6%9C%AC,+%E3%80%92090-0015+%E5%8C%97%E6%B5%B7%E9%81%93%E5%8C%97%E8%A6%8B%E5%B8%82%E5%85%AC%E5%9C%92%E7%94%BA%EF%BC%91%EF%BC%96%EF%BC%95&amp;hl=zh-CN&amp;geocode=%3BFf-unAIdUtGTCCmbS-Ce0VZtXzHUHuRjS0HwQg&amp;sll=43.822832,143.903979&amp;sspn=0.006897,0.011362&amp;brcurrent=3,0x0:0x0,0%3B5,0,0&amp;mra=mift&amp;mrsp=0&amp;sz=17&amp;ie=UTF8&amp;ll=43.822832,143.903979&amp;spn=0.006897,0.011362&amp;t=m&amp;start=0&amp;output=embed"></iframe>
+			<iframe src="http://www.google.cn/maps/embed?pb=!1m18!1m12!1m3!1d2785.3424234155505!2d126.64098580960152!3d45.724227262014146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xe4609f1301da9265!2z5Lic5YyX5p6X5Lia5aSn5a2m!5e0!3m2!1szh-CN!2scn!4v1433556487113" width="600" height="450"  style="border:0"></iframe>
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
