--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -50,7 +50,7 @@
 					<span> </span>
 					<div class="col-md-6 aboutus-left">
 						<p>Born in Jingmen, Hubei, China. Graduated from Longquan High School of Jingmen. </p>
-						<p>Now I am studying in Northeast Forestry University in Harbin, Heilongjiang province, Chine.</p>
+						<p>Now I am studying in Northeast Forestry University in Harbin, Heilongjiang province, China.</p>
 						<p>I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.</p>
 					</div>
 					<div class="col-md-6 aboutus-right">
