Modify location to Tsukuba

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -37,7 +37,7 @@
 								Hello,<br/>
 								I'm Meng Li. <br/>
 								A web/mobile application programmer.<br/>
-								Based in Harbin.<br/>
+								Based in Tsukuba, Ibaraki, Japan.<br/>
 							</p>
 							<a class="contactme" href="#contact">CONTACT ME</a>
 						</div>
@@ -49,8 +49,8 @@
 					<h2>ABOUT<br/>MENG LI</h2>
 					<span> </span>
 					<div class="col-md-6 aboutus-left">
-						<p>Born in Jingmen, Hubei, China. Graduated from Longquan High School of Jingmen. </p>
-						<p>Now I am studying in Northeast Forestry University in Harbin, Heilongjiang province, China.</p>
+						<p>Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. </p>
+						<p>Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.</p>
 						<p>I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.</p>
 					</div>
 					<div class="col-md-6 aboutus-right">
@@ -86,29 +86,30 @@
 					<span> </span>
 				<div class="contact-grids">
 					<div class="col-md-6 contact-left">
-						<p>My Hometown</p>
+						<p>China</p>
 						<div class="address">
 							<label>Hetianxia 902</label>
 							<label>Baiyun Ave No.1, Dongbao District</label>
 							<label>Jingmen, Hubei Province, China</label>
 							<label>+86 18571967011</label>
+							<label>Email: lm2343635@126.com</label>
 						</div>
 					</div>
 					<div class="col-md-6 contact-right">
-						<p>My University</p>
+						<p>Japan</p>
 						<div class="address">
-							<label>Northeast Forestry University, 9#A</label>
-							<label>Hexing Road, Xiangfang District</label>
-							<label>Harbin, Heilongjiang Province, China</label>
-							<label>+86 15545152994</label>
-							<label>Email: lm2343635@126.com</label>
+							<label>University of Tsukuba</label>
+							<label>Tennodai 1-1-1</label>
+							<label>Tsukuba, Ibaraki, Japan</label>
+							<label>+81 07010623837</label>
+							<label>Email: limeng@softlab.cs.tsukuba.ac.jp</label>
 						</div>
 					</div>
 				</div>
 			</div>
 			</div>
 		<div class="contact-map">
-			<iframe src="http://www.google.cn/maps/embed?pb=!1m18!1m12!1m3!1d2785.3424234155505!2d126.64098580960152!3d45.724227262014146!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0000000000000000%3A0xe4609f1301da9265!2z5Lic5YyX5p6X5Lia5aSn5a2m!5e0!3m2!1szh-CN!2scn!4v1433556487113" width="600" height="450"  style="border:0"></iframe>
+			<iframe src="http://www.google.cn/maps/embed?pb=!1m18!1m12!1m3!1d3223.3108189184054!2d140.0993196!3d36.11028470000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60220bff098eef6f%3A0x38f8406069ed2e60!2z562R5rOi5aSn5a2m!5e0!3m2!1szh-CN!2scn!4v1444282277303" width="600" height="450" ></iframe>
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
