--- a/WebContent/work.html
+++ b/WebContent/work.html
@@ -28,8 +28,8 @@
 	            		<img src="./images/AccountManagement.png" onclick="showOnePhoto('./images/AccountManagement.png')"/>
 	            		<p>Hibernate / Spring / DWR / Highchart.js / BootStrap / jQuery / MySQL / iOS</p>
 	            		<a class="readmore" href="file/An Individual Financial Management System Based on Asynchronous Communication.pdf"><span> </span> Paper of Easy Finance</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=AccountManagement.doc"><span> </span> Download the Report of Easy Finance</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=Account Management.pptx"><span> </span> Download the PowerPoint of Easy Finance</a>
+	            		<a class="readmore" href="file/AccountManagement.doc"><span> </span> Download the Report of Easy Finance</a>
+	            		<a class="readmore" href="file/Account Management.pptx"><span> </span> Download the PowerPoint of Easy Finance</a>
 	            	</div>
 	            	</div>
 	            </article>
@@ -53,13 +53,13 @@
 	            	<div class="artical-pic">
 	            		<img src="./images/DeforestationManagement.png" onclick="showOnePhoto('./images/DeforestationManagement.png')"/>
 	            			<p>JDBC / JSP / jQuery / Servlet / MySQL / Android</p>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=Research and Implementation of UCMap GIS Platform Based in Android.pdf">
+	            		<a class="readmore" href="file/Research and Implementation of UCMap GIS Platform Based in Android.pdf">
 	            		<span> </span> Download the the article of <em style="font-style: italic;">Research and Implementation of UCMap GIS Platform Based in Android</em>
 	            		</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=PDA Device equiped with the Function of Intelligence Collection.jpg">
+	            		<a class="readmore" href="file/PDA Device equiped with the Function of Intelligence Collection.jpg">
 	            			<span> </span> Download the Patent Certificate of <em style="font-style: italic;">PDA Device equiped with the Function of Intelligence Collection</em>
 	            		</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=Collection Equipment for Biological Environment Factor of Forest Based on Wireless Transmission.jpg">
+	            		<a class="readmore" href="file/Collection Equipment for Biological Environment Factor of Forest Based on Wireless Transmission.jpg">
 	            			<span> </span> Download the Patent Certificate of <em style="font-style: italic;">Collection Equipment for Biological Environment Factor of Forest Based on Wireless Transmission</em>
 	            		</a>
 	            	</div>
@@ -97,10 +97,10 @@
 	            	<div class="artical-pic">
 	            		<img src="./images/SevenStars.png" onclick="showOnePhoto('./images/SevenStars.png')"/>
 	            		<p>JDBC / DWR /Ajax / Bootstrap / jQuery / Servlet / MySQL / SQLServer 2012</p>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=SevenStarsScreenShot1.png"><span> </span> Download the ScreenShot1</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=SevenStarsScreenShot2.png"><span> </span> Download the ScreenShot2</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=SevenStarsScreenShot3.png"><span> </span> Download the ScreenShot3</a>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=SevenStarsScreenShot4.png"><span> </span> Download the ScreenShot4</a>
+	            		<a class="readmore" href="file/SevenStarsScreenShot1.png"><span> </span> Download the ScreenShot1</a>
+	            		<a class="readmore" href="file/SevenStarsScreenShot2.png"><span> </span> Download the ScreenShot2</a>
+	            		<a class="readmore" href="file/SevenStarsScreenShot3.png"><span> </span> Download the ScreenShot3</a>
+	            		<a class="readmore" href="file/SevenStarsScreenShot4.png"><span> </span> Download the ScreenShot4</a>
 	            	</div>
 	            	</div>
 	            </article>
@@ -119,7 +119,7 @@
 	            	<div class="artical-pic">
 	            		<img src="./images/GameCenter.png" />
 	            		<p> jQuery / html /css / javascript</p>
-	            		<a class="readmore" href="FileServlet?task=download&fileName=GameCenter.zip"><span> </span> Download the source code of Game Center</a>
+	            		<a class="readmore" href="file/GameCenter.zip"><span> </span> Download the source code of Game Center</a>
 	            	</div>
 	            	</div>
 	            </article>
