调整css和js文件夹位置到static目录下；引入summernote文本编辑框架

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,15 +4,15 @@
 		<meta charset="utf-8">
 		<title>Meng Li's Home Page</title>
 		<link rel="Shortcut Icon" href="images/favicon.ico">
-		<link href="./css/bootstrap.css" rel='stylesheet' type='text/css' />
-		<link href="./css/bootstrap.photo.css" rel='stylesheet' type='text/css' />
-		<link href="./css/style.css" rel='stylesheet' type='text/css' />
-		<script src="./js/jquery.min.js"></script>
-		<script src="./js/move-top.js"></script>
-		<script src="./js/easing.js"></script>
-		<script src="./js/bootstrap.js"></script>
-		<script src="./js/bootstrap.photo.js"></script>
-		<script src="./js/index.js"></script>
+		<link href="static/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="static/css/bootstrap.photo.css" rel='stylesheet' type='text/css' />
+		<link href="static/css/style.css" rel='stylesheet' type='text/css' />
+		<script src="static/js/jquery.min.js"></script>
+		<script src="static/js/move-top.js"></script>
+		<script src="static/js/easing.js"></script>
+		<script src="static/js/bootstrap.js"></script>
+		<script src="static/js/bootstrap.photo.js"></script>
+		<script src="static/js/index.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
@@ -20,18 +20,18 @@
 					<div class="top-header">
 						<div class="container">
 						<div class="logo">
-							<a href="#"><img src="./images/logo.png" title="Johndeo" /></a>
+							<a href="#"><img src="static/images/logo.png" title="Johndeo" /></a>
 						</div>
 						 <nav class="top-nav">
 							<ul class="top-nav">
 								<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
 								<li><a href="#works" class="scroll">Work</a></li>
 								<li><a href="#contact" class="scroll">Contact</a></li>
+								<li><a href="blogs.html" class="">Blog</a></li>
 							</ul>
-							<a href="#" id="pull"><img src="./images/nav-icon.png" title="menu" /></a>
+							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
 						</nav>
 						<div class="clearfix"> </div>
-						<!----top-header-info--->
 						<div class="top-header-info">
 							<p>
 								Hello,<br/>
@@ -64,6 +64,7 @@
 					<p>
 						A journey of a thousand miles begins with a single step. <br>
 						This is important for a programmer.<br>
+						<a href="https://github.com/lm2343635" target="_blank">Visit My Github</a>
 					</p>
 				</div>
 			</div>
@@ -114,7 +115,7 @@
 		<div class="copy-right text-center">
 			<div class="container">
 				<p>Made by Meng Li.</p>
-				<label>Copyright of Meng Li @ 2014-2015. All rights reserved. 鄂ICP备15010075号-1</label>
+				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
 	</body>
