--- a/WebContent/work.html
+++ b/WebContent/work.html
@@ -25,7 +25,7 @@
 	            		<p>Test Account: lm2343635@126.com <br>Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/AccountManagement.png" onclick="showOnePhoto('./images/AccountManagement.png')"/>
+	            		<img src="static/images/AccountManagement.png" onclick="showOnePhoto('static/images/AccountManagement.png')"/>
 	            		<p>Hibernate / Spring / DWR / Highchart.js / BootStrap / jQuery / MySQL / iOS</p>
 	            		<a class="readmore" href="file/An Individual Financial Management System Based on Asynchronous Communication.pdf"><span> </span> Paper of Easy Finance</a>
 	            		<a class="readmore" href="file/AccountManagement.doc"><span> </span> Download the Report of Easy Finance</a>
@@ -51,7 +51,7 @@
 	            		<p>Test Administrator Account: admin <br>Test Administrator Password: 123<br>Test Checker Account: test <br>Test Checker Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/DeforestationManagement.png" onclick="showOnePhoto('./images/DeforestationManagement.png')"/>
+	            		<img src="static/images/DeforestationManagement.png" onclick="showOnePhoto('static/images/DeforestationManagement.png')"/>
 	            			<p>JDBC / JSP / jQuery / Servlet / MySQL / Android</p>
 	            		<a class="readmore" href="file/Research and Implementation of UCMap GIS Platform Based in Android.pdf">
 	            		<span> </span> Download the the article of <em style="font-style: italic;">Research and Implementation of UCMap GIS Platform Based in Android</em>
@@ -78,7 +78,7 @@
 	            		<p>Test Administrator Account: 100000<br> Test Administrator Password: 123<br>Test Teacher Account: 100001 <br> Test Teacher Password: 123</p>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/GraduationProject.png" onclick="showOnePhoto('./images/GraduationProject.png')"/>
+	            		<img src="static/images/GraduationProject.png" onclick="showOnePhoto('static/images/GraduationProject.png')"/>
 	            		<p>Web Socket / JDBC / Ajax / Bootstrap / jQuery / Servlet / MySQL</p>
 	            	</div>
 	            	</div>
@@ -95,7 +95,7 @@
 	            		<p>Because this is a commercial project, I cannot provide a test account. You can view and download more screen shoots to know more about it</p>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/SevenStars.png" onclick="showOnePhoto('./images/SevenStars.png')"/>
+	            		<img src="static/images/SevenStars.png" onclick="showOnePhoto('static/images/SevenStars.png')"/>
 	            		<p>JDBC / DWR /Ajax / Bootstrap / jQuery / Servlet / MySQL / SQLServer 2012</p>
 	            		<a class="readmore" href="file/SevenStarsScreenShot1.png"><span> </span> Download the ScreenShot1</a>
 	            		<a class="readmore" href="file/SevenStarsScreenShot2.png"><span> </span> Download the ScreenShot2</a>
@@ -117,7 +117,7 @@
 	            		<a href="http://tomcat.fczm.pw/GameCenter/" target="_blank"><span> </span>Visit Index of Game Center</a>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/GameCenter.png" />
+	            		<img src="static/images/GameCenter.png" />
 	            		<p> jQuery / html /css / javascript</p>
 	            		<a class="readmore" href="file/GameCenter.zip"><span> </span> Download the source code of Game Center</a>
 	            	</div>
@@ -136,7 +136,7 @@
 	            	    </p>
 	            	</div>
 	            	<div class="artical-pic">
-	            		<img src="./images/StudentManagement.png" />
+	            		<img src="static/images/StudentManagement.png" />
 	            		<p>JDBC /JSP / MySQL</p>
 	            	</div>
 	            	</div>
@@ -146,7 +146,7 @@
 	</div>								  
 </div>
 
-<link href="./css/work.css" rel='stylesheet' type='text/css' />
-<script src="./js/modernizr.custom.min.js"></script>    
-<script src="./js/jquery.wmuSlider.js"></script>
-<script src="./js/work.js"></script>
+<link href="static/css/work.css" rel='stylesheet' type='text/css' />
+<script src="static/js/modernizr.custom.min.js"></script>    
+<script src="static/js/jquery.wmuSlider.js"></script>
+<script src="static/js/work.js"></script>
