管理员新增博客

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<title>Meng Li's Home Page</title>
 		<link rel="Shortcut Icon" href="images/favicon.ico">
-		<link href="static/css/bootstrap.css" rel='stylesheet' type='text/css' />
+		<link href="static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
 		<link href="static/css/bootstrap.photo.css" rel='stylesheet' type='text/css' />
 		<link href="static/css/style.css" rel='stylesheet' type='text/css' />
 		<script src="static/js/jquery.min.js"></script>
 		<script src="static/js/move-top.js"></script>
 		<script src="static/js/easing.js"></script>
-		<script src="static/js/bootstrap.js"></script>
+		<script src="static/js/bootstrap.min.js"></script>
 		<script src="static/js/bootstrap.photo.js"></script>
 		<script src="static/js/index.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
