编辑博客文章

--- a/WebContent/edit.html
+++ b/WebContent/edit.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="list-nav" class="nav navbar-nav logined-btn">
-                            <li><a href="blogs.html">Manage Blogs</a></li>
+                            <li><a href="manageBlogs.html">Manage Blogs</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
                             <li><a href="index.html" target="_blank">HomePage</a></li>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12 col-sm-2">
-                    <button class="btn btn-block btn-default">Clear</button>
+                    <button id="edit-blog-clear" class="btn btn-block btn-default">Clear</button>
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <button id="edit-blog-submit" class="btn btn-block btn-success">Save</button>
