--- a/WebContent/manageBlogs.html
+++ b/WebContent/manageBlogs.html
@@ -7,7 +7,7 @@
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
         <link href="static/css/summernote.min.css" rel="stylesheet">
         <link href="static/css/mengular.css" rel="stylesheet">
-        <link href="static/css/manageBlogs.html.css" rel="stylesheet">
+        <link href="static/css/manageBlogs.css" rel="stylesheet">
         <script src="static/js/jquery.min.js"></script> 
         <script src="static/js/jquery.bootstrap.min.js"></script>
         <script src="static/js/bootstrap.min.js"></script> 
@@ -16,7 +16,7 @@
         <script src="static/js/tools.js"></script>
         <script src="dwr/engine.js"></script>
         <script src="dwr/interface/BlogManager.js"></script>
-        <script src="static/js/manageBlogs.html.js"></script>
+        <script src="static/js/manageBlogs.js"></script>
     </head>
     <body>
         <div class="container">
@@ -28,7 +28,7 @@
                     </div>
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul id="list-nav" class="nav navbar-nav logined-btn">
-                            <li class="active"><a href="blogs.html">Manage Blogs</a></li>
+                            <li class="active"><a href="manageBlogs.html">Manage Blogs</a></li>
                         </ul>
                         <ul id="list-nav" class="nav navbar-nav navbar-right">
                             <li><a href="index.html" target="_blank">HomePage</a></li>
