博客页面的显示和文章的阅读

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,88 +3,87 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Meng Li's Home Page</title>
-		<link rel="Shortcut Icon" href="images/favicon.ico">
-		<link href="static/css/bootstrap.min.css" rel='stylesheet' type='text/css' />
-		<link href="static/css/bootstrap.photo.css" rel='stylesheet' type='text/css' />
-		<link href="static/css/style.css" rel='stylesheet' type='text/css' />
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<link rel="Shortcut Icon" href="static/images/favicon.ico">
+		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
+		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
+		<link href="static/css/style.css" rel="stylesheet"/>
 		<script src="static/js/jquery.min.js"></script>
 		<script src="static/js/move-top.js"></script>
 		<script src="static/js/easing.js"></script>
 		<script src="static/js/bootstrap.min.js"></script>
 		<script src="static/js/bootstrap.photo.js"></script>
 		<script src="static/js/index.js"></script>
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-			<div id="home" class="header">
-					<div class="top-header">
-						<div class="container">
-						<div class="logo">
-							<a href="#"><img src="static/images/logo.png" title="Johndeo" /></a>
-						</div>
-						 <nav class="top-nav">
-							<ul class="top-nav">
-								<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
-								<li><a href="#works" class="scroll">Work</a></li>
-								<li><a href="#contact" class="scroll">Contact</a></li>
-								<li><a href="blogs.html" class="">Blog</a></li>
-							</ul>
-							<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
-						</nav>
-						<div class="clearfix"> </div>
-						<div class="top-header-info">
-							<p>
-								Hello,<br/>
-								I'm Meng Li. <br/>
-								A web/mobile application programmer.<br/>
-								Based in Tsukuba, Ibaraki, Japan.<br/>
-							</p>
-							<a class="contactme" href="#contact">CONTACT ME</a>
-						</div>
+		<div id="home" class="header">
+			<div class="top-header">
+				<div class="container">
+					<div class="logo">
+						<a href="index.html"><img src="static/images/logo.png"/></a>
+					</div>
+					<nav class="top-nav">
+						<ul class="top-nav">
+							<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
+							<li><a href="#works" class="scroll">Work</a></li>
+							<li><a href="#contact" class="scroll">Contact</a></li>
+							<li><a href="blogs.html" class="">Blog</a></li>
+						</ul>
+						<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
+					</nav>
+					<div class="clearfix"> </div>
+					<div class="top-header-info">
+						<p>
+							Hello,<br/>
+							I'm Meng Li. <br/>
+							A web/mobile application programmer.<br/>
+							Based in Tsukuba, Ibaraki, Japan.<br/>
+						</p>
+						<a class="contactme" href="#contact">CONTACT ME</a>
 					</div>
 				</div>
 			</div>
-			<div class="aboutus">
-				<div class="container">
-					<h2>ABOUT<br/>MENG LI</h2>
-					<span> </span>
-					<div class="col-md-6 aboutus-left">
-						<p>Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. </p>
-						<p>Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.</p>
-						<p>I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.</p>
-					</div>
-					<div class="col-md-6 aboutus-right">
-						<p>I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.</p>
-						<p>In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.</p>
-					</div>
+		</div>
+		<div class="aboutus">
+			<div class="container">
+				<h2>ABOUT<br/>MENG LI</h2>
+				<span> </span>
+				<div class="col-md-6 aboutus-left">
+					<p>Born in Jingmen, Hubei, China. Graduated from Northeast Forestry University in Harbin, China. </p>
+					<p>Now I am studying in University of Tsukuba in Tsukuba, Ibaraki, Japan.</p>
+					<p>I am interested in web application and mobile application development. There are some projects of me, some of them are made by myself, and others are which I cooperated with my group.</p>
+				</div>
+				<div class="col-md-6 aboutus-right">
+					<p>I am familiar with Objective-C and Java language. For Java, not only can I use Java SE but also some basic framework of Java EE like Hibernate, Spring, JNDI and so on. I can use Java language to develop web application and Android Application. Now I am learning Objective-C language for iOS Application development.</p>
+					<p>In Web Application development, page design is also important, I also learned html, css and javascript. For javascript, I am familiar with jQuery framework. I can use the API in jQuery to develop the simple Ajax Application or the DWR framework to complete some complex Ajax Application.</p>
 				</div>
 			</div>
-			<div class="quote text-center">
-				<div class="container">
-					<p>
-						A journey of a thousand miles begins with a single step. <br>
-						This is important for a programmer.<br>
-						<a href="https://github.com/lm2343635" target="_blank">Visit My Github</a>
-					</p>
-				</div>
+		</div>
+		<div class="quote text-center">
+			<div class="container">
+				<p>
+					A journey of a thousand miles begins with a single step. <br>
+					This is important for a programmer.<br>
+					<a href="https://github.com/lm2343635" target="_blank" style="color: #7EECE4; position: relative; top: 26px;">Visit My Github</a>
+				</p>
 			</div>
-			<div class="works" id="works">
+		</div>
+		<div class="works" id="works"></div>
+		<div class="testmonials">
+			<div class="container">
+				<h2>What I Focus on My Project</h2>
+				<p class="text-white">
+					With the development of hardware in the last 30 years, hardware has a very strong performance, 
+					it is no doubt that the user experience is most important thing for software development now. 
+					People's attention focus more and more on Human-Computer Interaction. How to develop the 
+					user interface experience is what I want to research now.
+				</p>
 			</div>
-			<div class="testmonials">
-				<div class="container">
-					<h2>What I Focus on My Project</h2>
-					<p class="text-white">
-						With the development of hardware in the last 30 years, hardware has a very strong performance, 
-						it is no doubt that the user experience is most important thing for software development now. 
-						People's attention focus more and more on Human-Computer Interaction. How to develop the 
-						user interface experience is what I want to research now.
-					</p>
-				</div>
-			</div>
-			<div id="contact" class="contact"> 
-				<div class="container">
-					<h2>Ways to Contact Me</h2>
-					<span> </span>
+		</div>
+		<div id="contact" class="contact"> 
+			<div class="container">
+				<h2>Ways to Contact Me</h2>
+				<span> </span>
 				<div class="contact-grids">
 					<div class="col-md-6 contact-left">
 						<p>China</p>
@@ -108,7 +107,7 @@
 					</div>
 				</div>
 			</div>
-			</div>
+		</div>
 		<div class="contact-map">
 			<iframe src="http://www.google.cn/maps/embed?pb=!1m18!1m12!1m3!1d3223.3108189184054!2d140.0993196!3d36.11028470000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60220bff098eef6f%3A0x38f8406069ed2e60!2z562R5rOi5aSn5a2m!5e0!3m2!1szh-CN!2scn!4v1444282277303" width="600" height="450" ></iframe>
 		</div>
@@ -120,4 +119,3 @@
 		</div>
 	</body>
 </html>
-
