--- a/WebContent/manageBlogs.html
+++ b/WebContent/manageBlogs.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8">
         <title>Manage My Blogs</title>
+        <link rel="Shortcut Icon" href="static/images/favicon.ico">
         <link href="static/css/bootstrap.min.css" rel="stylesheet">
         <link href="static/css/font-awesome.min.css" rel="stylesheet">
         <link href="static/css/summernote.min.css" rel="stylesheet">
