优化保存和加载的loading

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -114,6 +114,7 @@
 		<div class="copy-right text-center">
 			<div class="container">
 				<p>Made by Meng Li.</p>
+				<a href="manageBlogs.html">Manage My Blog</a>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
