--- a/WebContent/blog.html
+++ b/WebContent/blog.html
@@ -7,6 +7,7 @@
 		<link rel="Shortcut Icon" href="static/images/favicon.ico">
 		<link href="static/css/bootstrap.min.css" rel="stylesheet"/>
 		<link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
+		<link href="static/css/font-awesome.min.css" rel="stylesheet"/>
 		<link href="static/css/docs.min.css" rel="stylesheet"/>
 		<link href="static/css/style.css" rel="stylesheet"/>
 		<link href="static/css/mengular.css" rel="stylesheet"/>
@@ -41,6 +42,10 @@
 		</div>
 		<div class="container">
 			<div id="blog-panel" class="panel panel-default">
+				<div id="loading-blog">
+					<h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 10em;"></i></h1>
+					<h1 class="text-info text-center">Loading this blog article...</h1>
+				</div>
 				<div id="blog-content" class="panel-body"></div>
 			</div>
 			<a href="javascript:window.history.go(-1)" class="btn btn-block btn-lg btn-info" style="margin-bottom: 30px;">Back to Blogs</a>
