--- a/WebContent/edit.html
+++ b/WebContent/edit.html
@@ -54,6 +54,10 @@
                     <button id="edit-blog-submit" class="btn btn-block btn-success">Save</button>
                 </div>
                 <div class="col-xs-12">
+                    <div id="loading-blog">
+                        <h1 class="text-info text-center"><i class="fa fa-spinner fa-6 fa-spin" style="font-size: 10em;"></i></h1>
+                        <h1 class="text-info text-center">Loading this blog article...</h1>
+                    </div>
                      <div id="edit-blog-content"></div>
                 </div>
             </div>
