修复edit.html文件中未导入AdminManager的bug

--- a/WebContent/edit.html
+++ b/WebContent/edit.html
@@ -16,6 +16,7 @@
         <script src="static/js/tools.js"></script>
         <script src="dwr/engine.js"></script>
         <script src="dwr/interface/BlogManager.js"></script>
+        <script src="dwr/interface/AdminManager.js"></script>
         <script src="static/js/edit.js"></script>
     </head>
     <body>
