--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -27,7 +27,7 @@
 							<li class="active"><a href="#home" class="scroll">About</a><span> </span></li>
 							<li><a href="#works" class="scroll">Work</a></li>
 							<li><a href="#contact" class="scroll">Contact</a></li>
-							<li><a href="blogs.html" class="">Blog</a></li>
+							<li><a href="blogs.html" class="">Blogs</a></li>
 						</ul>
 						<a href="#" id="pull"><img src="static/images/nav-icon.png" title="menu" /></a>
 					</nav>
@@ -113,8 +113,7 @@
 		</div>
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li.</p>
-				<a href="admin.html">Manage My Blog</a>
+				<p>Made by Meng Li. <a href="admin.html">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
