--- a/WebContent/blogs.html
+++ b/WebContent/blogs.html
@@ -54,7 +54,7 @@
 		</div>	
 		<div class="copy-right text-center">
 			<div class="container">
-				<p>Made by Meng Li.</p>
+				<p>Made by Meng Li. <a href="admin.html">Manage My Blog</a></p>
 				<label>Copyright of Meng Li @ 2014-2016. All rights reserved. 鄂ICP备15010075号-1</label>
 			</div>
 		</div>
